package ar.edu.utn.frba.ddsi.donaciones.models.entities;

import java.util.List;

public class Categoria {
    private String nombre;
    List<Subcategoria> subcategorias;
}
