package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public class Direccion {
    private String calle;
    private String numero;
    private String localidad;
    private Provincia provincia;
    private double latitud;
}
