package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public enum Provincia
{
    BUENOSAIRES,
    MENDOZA,
    CORDOBA
}
