package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public class Subcategoria {
    private String nombre;
    private Categoria categoria;
}
