package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public enum TipoDonante {
    HUMANO,
    JURIDICO
}
