@startuml

' =========================
' ENUMS
' =========================
enum MedioNotificacion {
EMAIL
SMS
WHATSAPP
}
enum Provincia {
BUENOSAIRES
MENDOZA
TUCUMAN
}

enum TipoDonante{
HUMANO
JURIDICO
}
enum TipoDoc{
DNI
CUIT
}

enum EstadoNotificacion {
PENDIENTE
ENVIADA
}

enum TipoNecesidad {
RECURRENTE
EXTRAORDINARIA
}

enum EstadoDonacionSegmentada {
DEPOSITO
TOTAL
}
' =========================
' Categoria y Subcategoria
' =========================
class Categoria {
 * nombre
 * subcategorias
}
class Subcategoria {
 * nombre
 * categoria
}
Categoria "1" *-- "many" Subcategoria
ItemDonacion "1" *-- "many" Subcategoria
' =========================
' DONANTE
' =========================
class Donante {
* nombre
* tipo
* identificador
* tipoDoc
* representante
* direccion
* email
* telefono

}
Donante "1" *-- "many" Donacion
' =========================
' DIRECCION
' =========================
class Direccion {
* calle
* numero
* provincia
* localidad
* latitud
* longitud
}
EntidadBeneficiaria "1" *-- "1" Direccion
' =========================
' DONACION
' =========================
class Donacion {

* donante
* descripcion
* fecha
* items : List<ItemDonacion>
* segmentadas : List<DonacionSegmentada>

- segmentar()
  }

class ItemDonacion {

* subcategoria
* cantidad
* fechaVencimiento
* estado

- registrarRecepcion()
- estaSatisfecha()
  }

class DonacionSegmentada {

* subcategoria
* cantidadTotal
* fechaVencimiento
* estadoProducto
* estado : EstadoDonacionSegmentada
* asignaciones : List<Asignacion>

- marcarComoAsignada()
  }

Donacion "1" *-- "many" ItemDonacion
Donacion "1" *-- "many" DonacionSegmentada

' =========================
' ENTIDADES Y NECESIDADES
' =========================
class EntidadBeneficiaria {

* razonSocial
* direccion
* telefono
  }

class Necesidad {

* subcategoria
* cantidadObjetivo
* cantidadActual
* tipo : TipoNecesidad
* descripcion

- registrarRecepcion(cantidad)
- estaSatisfecha()
  }

EntidadBeneficiaria "1" -- "many" Necesidad
' =========================
' SERVICIO
' =========================

class ServicioAsignacion {
    + asignar(
        donaciones: List<DonacionSegmentada>,
        necesidades: List<Necesidad>
    ): List<Asignacion>
}
ServicioAsignacion ..> DonacionSegmentada
ServicioAsignacion ..> Necesidad
ServicioAsignacion ..> Asignacion
' =========================
' ASIGNACION
' =========================
class Asignacion {

* Necesidad
* DonacionSegmentada
  }

DonacionSegmentada "1" -- "many" Asignacion
Necesidad "1" -- "many" Asignacion

' =========================
' NOTIFICACIONES
' =========================
class Notificacion {

* mensaje
* medio : MedioNotificacion
* estado : EstadoNotificacion

- enviar()
  }

Donante "1" -- "many" Notificacion
EntidadBeneficiaria "1" -- "many" Notificacion

@enduml